--- a/self-portrait/index.html
+++ b/self-portrait/index.html
@@ -4,9 +4,11 @@
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <style> body {padding: 0; margin: 0;} </style>
   <head>
+  	<script src="../p5.min.js"></script>
+    <script src="../addons/p5.dom.min.js"></script>
+    <script src="../addons/p5.sound.min.js"></script>
     <script src="glasses.js"></script>
   </head>
   <body>
-    random text - lorem ipsum
   </body>
 </html>
