--- a/self-portrait/index.html
+++ b/self-portrait/index.html
@@ -6,7 +6,8 @@
   	<script src="../p5.min.js"></script>
     <script src="../addons/p5.dom.min.js"></script>
     <script src="../addons/p5.sound.min.js"></script>
-    <script src="glasses.js"></script>
+    <!-- <script src="glasses.js"></script> -->
+    <script src="loadsvg-test.js"></script>
   </head>
   <body>
   </body>
