--- a/tree/index.html
+++ b/tree/index.html
@@ -6,9 +6,9 @@
     <script src="../p5.min.js"></script>
     <script src="../addons/p5.dom.min.js"></script>
     <script src="../addons/p5.sound.min.js"></script>
-    <script src="sketch.js"></script>
+    <!-- <script src="growRemove.js"></script> -->
+    <script src="score.js"></script>
   </head>
   <body>
-    hello
   </body>
 </html>
