--- a/Albers/index.html
+++ b/Albers/index.html
@@ -46,7 +46,7 @@
     <div class="scene"></div>
     <div class="scene ending"></div>
 
-    <!-- <script src="albers-svg.js"></script> -->
+    <script src="albers-svg.js"></script>
     <script src="scrolling-test.js"></script>
 
   </body>
