got albers working, updates to score game

--- a/Albers/index.html
+++ b/Albers/index.html
@@ -41,10 +41,10 @@
       <input type="button" onclick="moveArray(sceneObjects[0], 50)" value="move 50"></input>
     </div>
     <div class="intro"></div>
-    <div class="scene"></div>
+    <div class="scene" id="trigger-0"></div>
     <div class="scene" id="trigger-1">I've got content</div>
-    <div class="scene"></div>
-    <div class="scene ending"></div>
+    <div class="scene" id="trigger-2"></div>
+    <div class="scene ending" id="trigger-3"></div>
 
     <script src="albers-svg.js"></script>
     <script src="scrolling-test.js"></script>
