--- a/tree/index.html
+++ b/tree/index.html
@@ -8,7 +8,11 @@
     <script src="../addons/p5.sound.min.js"></script>
     <!-- <script src="growRemove.js"></script> -->
     <script src="score.js"></script>
+    <!-- <script src="seeking.js"></script> -->
+    <script src="vehicle.js"></script>
+
   </head>
   <body>
   </body>
+
 </html>
