updated moire to correct

--- a/Albers/index.html
+++ b/Albers/index.html
@@ -49,5 +49,18 @@
     <script src="albers-svg.js"></script>
     <script src="scrolling-test.js"></script>
 
+    <!-- additional text -->
+
+    <!--
+      <section class="panel first">
+      <b>Our brain can easily be tricked into interpreting information incorrectly.</b>
+      </section>
+      <section class="panel second">
+      <p>What we perceive as </p>
+      <p><b>objective stimuli</b></p>
+      <p>is actually colored by </p>
+      <p><b>contextual information.</b></p>
+    -->
+  </section>
   </body>
 </html>
