--- a/moire/index.html
+++ b/moire/index.html
@@ -4,14 +4,14 @@
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <style> body {padding: 0; margin: 0;} </style>
 
-    <link rel="stylesheet" href="ScrollMagic/css/normalize.css" type="text/css">
-	  <link rel="stylesheet" href="ScrollMagic/css/style.css" type="text/css">
-	  <link rel="stylesheet" href="ScrollMagic/css/examples.css" type="text/css">
-    <script type="text/javascript" src="ScrollMagic/js/lib/jquery.min.js"></script>
-	  <script type="text/javascript" src="ScrollMagic/js/lib/highlight.pack.js"></script>
-	  <script type="text/javascript" src="ScrollMagic/js/lib/modernizr.custom.min.js"></script>
-	  <script type="text/javascript" src="ScrollMagic/js/examples.js"></script>
-    <script src="ScrollMagic/scrollmagic/minified/ScrollMagic.min.js"></script>
+    <link rel="stylesheet" href="css/normalize.css" type="text/css">
+	  <link rel="stylesheet" href="css/style.css" type="text/css">
+	  <link rel="stylesheet" href="css/examples.css" type="text/css">
+    <script type="text/javascript" src="js/lib/jquery.min.js"></script>
+	  <script type="text/javascript" src="js/lib/highlight.pack.js"></script>
+	  <script type="text/javascript" src="js/lib/modernizr.custom.min.js"></script>
+	  <script type="text/javascript" src="js/examples.js"></script>
+    <script src="js/scrollmagic/minified/ScrollMagic.min.js"></script>
 
 
     <style type="text/css">
